--- a/src/pages/cart/styles.scss
+++ b/src/pages/cart/styles.scss
@@ -1,61 +1,62 @@
+
 .cart-page {
+  padding: 20px;
+  background-color: #f4f7fc;
+
+  h2 {
+    font-size: 28px;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 20px;
+  }
+
+  .cart-items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+
+  .product-image {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+  }
+
+  .cart-summary {
+    background-color: #fff;
     padding: 20px;
-    background-color: #f4f7fc;
-  
-    h2 {
-      font-size: 28px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    width: 100px;
+
+    h3 {
+      font-size: 24px;
       font-weight: 600;
       color: #333;
-      margin-bottom: 20px;
     }
-  
-    .cart-items {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 20px;
+
+    p {
+      font-size: 22px;
+      font-weight: 600;
+      color: #333;
     }
-  
-    .product-image {
+
+    .checkout-button {
       width: 100%;
-      height: auto;
+      padding: 12px 0;
+      font-size: 18px;
+      font-weight: 600;
+      background-color: #6299cf;
+      color: #fff;
+      border: none;
       border-radius: 5px;
-    }
-  
-    .cart-summary {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      margin-top: 20px;
-  
-      h3 {
-        font-size: 24px;
-        font-weight: 600;
-        color: #333;
-      }
-  
-      p {
-        font-size: 22px;
-        font-weight: 600;
-        color: #333;
-      }
-  
-      .checkout-button {
-        width: 100%;
-        padding: 12px 0;
-        font-size: 18px;
-        font-weight: 600;
-        background-color: #6299cf;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-  
-        &:hover {
-          background-color: #417cb0;
-        }
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: #417cb0;
       }
     }
   }
-  
+}
