--- a/src/pages/cart/styles.scss
+++ b/src/pages/cart/styles.scss
@@ -1,4 +1,3 @@
-
 .cart-page {
   padding: 20px;
   background-color: #f4f7fc;
@@ -29,7 +28,9 @@
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
-    width: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 
     h3 {
       font-size: 24px;
@@ -58,5 +59,39 @@
         background-color: #417cb0;
       }
     }
+  }
+
+  .payment-form {
+    width: 320px;
+    padding: 20px;
+    margin: 15px 0;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 10px;
+  }
+
+  .payment-form h3 {
+    font-size: 24px;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 20px;
+  }
+
+  .payment-form .ant-input {
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+
+  .payment-form .ant-btn {
+    border-radius: 4px;
+    background-color: #6299cf;
+    color: white;
+    width: 100%;
+  }
+
+  .payment-form .ant-btn:hover {
+    background-color: #417cb0;
   }
 }
