--- a/src/pages/product/styles.scss
+++ b/src/pages/product/styles.scss
@@ -10,6 +10,34 @@
     color: #333;
     text-transform: uppercase;
   }
+  .scroll-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: #86adc7;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+    z-index: 1000;
+
+    &:hover {
+      background-color: #2980b9;
+      transform: scale(1.1);
+    }
+
+    &:active {
+      transform: scale(1);
+    }
+  }
 
   .menu-container {
     display: flex;
@@ -111,32 +139,32 @@
       display: flex;
       justify-content: center;
       gap: 10px;
-      position: absolute;
+      position: relative;
       bottom: 15px;
-      left: 0;
-      right: 0;
-      padding: 0 15px;
+      padding: 8px;
     }
+    
+    
     .order-button {
       position: relative;
       padding: 10px 20px;
       font-size: 16px;
-      background-color: #6299cf;
+      background-color: #c5d7e9;
       color: white;
       border: none;
       border-radius: 5px;
       transition: transform 0.3s ease-in-out;
-    
+
       &:hover {
         background-color: #417cb0;
         transform: scale(1.1);
       }
-    
+
       &.animate {
         animation: button-clicked 0.3s ease-in-out;
       }
     }
-    
+
     @keyframes button-clicked {
       0% {
         transform: scale(1);
@@ -148,7 +176,7 @@
         transform: scale(1.1);
       }
     }
-    
+
     .cart-notification {
       position: fixed;
       top: 20px;
@@ -162,12 +190,12 @@
       transition: opacity 0.3s ease;
       z-index: 1000;
     }
-    
+
     .order-button {
       width: 100%;
       font-size: 10px;
       padding: 10px 0;
-      background-color: #1e88e5;
+      background-color: #859db3;
       border: none;
       color: #fff;
       font-weight: bold;
@@ -177,51 +205,51 @@
       &:hover {
         background-color: #1565c0;
       }
-      .product-card {
-  position: relative;
-  .product-image {
-    width: 100%;
-    height: auto;
-    transition: transform 0.5s ease-in-out;
-  }
-
-  &.animate {
-    .product-image {
-      transform: scale(0.2);
-      opacity: 0;
-      transition: transform 0.5s ease-in-out, opacity 0.5s ease;
     }
-  }
 
-  .cart-icon {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #6299cf;
-    color: white;
-    padding: 15px;
-    border-radius: 50%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-}
+    .product-card {
+      position: relative;
+      .product-image {
+        width: 100%;
+        height: auto;
+        transition: transform 0.5s ease-in-out;
+      }
 
-@keyframes moveToCart {
-  0% {
-    transform: scale(1);
-    left: 0;
-    top: 0;
-  }
-  100% {
-    transform: scale(0.2);
-    left: 90%;
-    top: 90%;
-  }
-}
+      &.animate {
+        .product-image {
+          transform: scale(0.2);
+          opacity: 0;
+          transition: transform 0.5s ease-in-out, opacity 0.5s ease;
+        }
+      }
 
+      .cart-icon {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #7da1c5;
+        color: white;
+        padding: 15px;
+        border-radius: 50%;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+      }
+    }
+
+    @keyframes moveToCart {
+      0% {
+        transform: scale(1);
+        left: 0;
+        top: 0;
+      }
+      100% {
+        transform: scale(0.2);
+        left: 90%;
+        top: 90%;
+      }
     }
   }
 }
