--- a/src/pages/brandfilter/styles.scss
+++ b/src/pages/brandfilter/styles.scss
@@ -1,15 +1,49 @@
-.home-page {
-  padding: 20px 100px;
-  
-  .title {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-
+.brand-filter-page {
   .menu-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
     margin-bottom: 30px;
+    
+    .brand-link {
+      text-decoration: none;
+      padding: 5px 10px;
+      color: #333;
+      font-size: 14px;
+      font-weight: 400;
+      background-color: #e0e0e0;
+      border-radius: 10px;
+      transition: all 0.3s ease;
+      position: relative;
+      
+      &:hover {
+        background-color: #8fa8be;
+        color: #fff;
+        transform: translateY(-3px);  
+      }
+
+      &.active {
+        background-color: #8fa8be;
+        color: #fff;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  
+      }
+
+      &::after { 
+        content: ''; 
+        position: absolute; 
+        left: 50%; 
+        bottom: 0; 
+        width: 0; 
+        height: 1px; 
+        background-color: #b9b5b7; 
+        transition: width 0.3s ease, left 0.3s ease; 
+        transform: translateX(-50%); 
+      }
+      
+      &:hover::after {
+        width: 100%;  
+      }
+    }
   }
 
   .product-list {
@@ -17,18 +51,20 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 30px;
     justify-items: center;
+    padding-top: 20px;
   }
 
   .product-card {
     background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 20px;
+    border: 2px solid #ddd;
+    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+    position: relative;
     
     &:hover {
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);  
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
       transform: translateY(-5px);  
     }
 
@@ -36,19 +72,21 @@
       display: block;
       color: inherit;
       text-decoration: none;
+      border-radius: 10px;
       
       .product-image {
-        width: 70%;
+        width: 80%;
         height: auto;
-        border-radius: 4px;
-        transition: transform 0.3s ease;  
+        border-radius: 5px;
+        transition: transform 0.3s ease;
+        
         &:hover {
-          transform: scale(1.05); 
+          transform: scale(1.05);  
         }
       }
 
       .product-info {
-        margin-top: 5px;
+        margin-top: 10px;
 
         .product-name {
           font-size: 18px;
@@ -115,38 +153,15 @@
     }
   }
 
-  .show-more-button {
-    margin-top: 20px;
-    background-color: #86adc7;
-    border-color: #86adc7;
-    color: #fff;
-    width: 100%;
-    font-size: 16px;
-    padding: 10px;
-    transition: background-color 0.3s, transform 0.3s ease;
-    
-    &:hover {
-      background-color: #567f9f;
-      border-color: #567f9f;
-      transform: scale(1.05);
+  @keyframes buttonAnimation {
+    0% {
+      transform: scale(1);
     }
-  }
-
-  .scroll-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #bad1e0;
-    color: #000000;
-    padding: 10px;
-    border-radius: 60%;
-    font-size: 20px;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.3s ease;
-
-    &:hover {
-      background-color: #ced7dd;
-      transform: translateY(-5px);  
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
     }
   }
 
@@ -161,7 +176,7 @@
     border-radius: 4px;
     text-align: center;
     z-index: 1000;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     animation: slideUp 0.5s ease-out;
   }
 
@@ -173,18 +188,6 @@
     100% {
       opacity: 1;
       transform: translateY(0);
-    }
-  }
-
-  @keyframes buttonAnimation {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.1);
-    }
-    100% {
-      transform: scale(1);
     }
   }
 }
