--- a/src/pages/product/styles.scss
+++ b/src/pages/product/styles.scss
@@ -136,7 +136,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #bad1e0;
+    background-color: #e3e9ec;
     color: #000000;
     padding: 10px;
     border-radius: 60%;
