--- a/src/pages/productDetail/styles.scss
+++ b/src/pages/productDetail/styles.scss
@@ -1,7 +1,17 @@
 .product-detail-page {
   display: flex;
+  flex-direction: column;
   padding: 30px;
   background-color: #f9f9f9;
+
+  .product-detail-page-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
 
   .product-images {
     flex: 1;
@@ -10,6 +20,7 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    max-width: 600px;
 
     &:hover {
       transform: translateY(-10px);
@@ -17,8 +28,8 @@
     }
 
     .main-image {
-      width: 60%;
-      max-width: 250px;
+      width: 100%;
+      max-width: 300px;
       height: auto;
       border-radius: 10px;
       padding: 20px;
@@ -52,6 +63,7 @@
   .product-info {
     flex: 1.5;
     padding-left: 50px;
+    max-width: 600px;
 
     .product-name {
       font-size: 24px;
@@ -139,16 +151,17 @@
         font-size: 16px;
         font-weight: bold;
         border-radius: 5px;
+        background-color: #cb1c22;
         border: none;
         cursor: pointer;
         transition: background-color 0.3s ease, transform 0.3s ease;
 
         &.buy-now {
-          background-color: #1e88e5;
+          background-color: #cb1c22;
           color: white;
 
           &:hover {
-            background-color: #1565c0;
+            background-color: #c2cdd8;
             transform: scale(1.05);
           }
         }
@@ -163,6 +176,81 @@
           }
         }
       }
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .product-detail-page-container {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .product-images,
+    .product-info {
+      flex: 1 1 100%;
+      padding-left: 0;
+    }
+
+    .product-images {
+      margin-bottom: 20px;
+    }
+
+    .product-info {
+      padding-left: 0;
+      padding-top: 20px;
+    }
+
+    .main-image {
+      width: 80%;
+      max-width: 300px;
+    }
+
+    .product-name {
+      font-size: 20px;
+    }
+
+    .product-price {
+      font-size: 18px;
+    }
+
+    .product-actions button {
+      width: 100%;
+      padding: 15px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .main-image {
+      width: 90%;
+      max-width: 200px;
+    }
+
+    .product-name {
+      font-size: 18px;
+    }
+
+    .product-price {
+      font-size: 16px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .main-image {
+      width: 100%;
+      max-width: 150px;
+    }
+
+    .product-name {
+      font-size: 16px;
+    }
+
+    .product-price {
+      font-size: 14px;
+    }
+
+    .product-actions button {
+      padding: 10px;
+      font-size: 14px;
     }
   }
 }
