--- a/src/pages/accessory/styles.scss
+++ b/src/pages/accessory/styles.scss
@@ -13,7 +13,7 @@
 
   .product-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
@@ -89,7 +89,8 @@
         padding: 10px 20px;
         border-radius: 30px;
         font-weight: 600;
-        transition: background-color 0.3s, transform 0.3s ease, box-shadow 0.3s ease;
+        transition: background-color 0.3s, transform 0.3s ease,
+          box-shadow 0.3s ease;
 
         &:hover {
           background-color: #b4363a;
@@ -108,7 +109,7 @@
   .show-more-button {
     margin-top: 18px;
     background-color: #cb1c22;
-    border-color: #86adc7;
+    border-color: #bdc0c2;
     color: #fff;
     max-width: 300px;
     font-size: 18px;
@@ -118,34 +119,15 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-  
+
     &:hover {
       background-color: #ccd0d3;
       border-color: #cb1c22;
       transform: scale(1.05);
     }
-  
+
     &:focus {
       outline: 2px solid #e91e63;
-    }
-  }
-  
-
-  .scroll-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #e3e9ec;
-    color: #000;
-    padding: 15px;
-    border-radius: 50%;
-    font-size: 20px;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.3s ease;
-
-    &:hover {
-      background-color: #ced7dd;
-      transform: translateY(-5px);
     }
   }
 
@@ -164,7 +146,23 @@
     animation: slideUp 0.5s ease-out;
     font-size: 14px;
   }
+  .scroll-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #2b2828;
+    color: #ffffff;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s ease;
 
+    &:hover {
+      background-color: #cb1c22;
+      transform: translateY(-5px);
+    }
+  }
   @keyframes slideUp {
     0% {
       opacity: 0;
