--- a/src/component/HeaderComponent/styles.scss
+++ b/src/component/HeaderComponent/styles.scss
@@ -3,6 +3,10 @@
   padding: 15px 30px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  position: sticky; 
+  top: 0; 
+  width: 100%; 
+  left: 0;
 
   .ant-row {
     display: flex;
@@ -54,6 +58,7 @@
         opacity: 1;
       }
     }
+    
   }
   @keyframes red-envelope {
     0% { transform: translateX(0); }
