--- a/src/pages/brandfilter/styles.scss
+++ b/src/pages/brandfilter/styles.scss
@@ -7,7 +7,7 @@ $transition: 0.3s ease;
 .brand-filter-page {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 20px ;
 
   .menu-container {
     display: flex;
@@ -59,20 +59,19 @@ $transition: 0.3s ease;
 
   .product-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
     justify-items: center;
-    padding-top: 20px;
   }
 
   .product-card {
     background-color: #fff;
-    border: 2px solid #ddd;
-    padding: 15px;
+    border: 1px solid #ddd;
+    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: all $transition;
-    position: relative;
+    transition: all 0.3s ease;
+    max-width: 300px;
 
     &:hover {
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -83,13 +82,13 @@ $transition: 0.3s ease;
       display: block;
       color: inherit;
       text-decoration: none;
-      border-radius: 10px;
 
       .product-image {
-        width: 100%;
-        height: auto;
-        border-radius: 5px;
-        transition: transform $transition;
+      width: 70%;
+      max-width: 300px;
+      height: auto;
+      border-radius: 8px;
+      transition: transform 0.3s ease, filter 0.3s ease;
 
         &:hover {
           transform: scale(1.05);
@@ -97,13 +96,13 @@ $transition: 0.3s ease;
       }
 
       .product-info {
-        margin-top: 10px;
+        margin-top: 5px;
 
         .product-name {
-          font-size: 16px;
+          font-size: 18px;
           font-weight: 600;
           margin: 10px 0;
-          transition: color $transition;
+          transition: color 0.3s ease;
 
           &:hover {
             color: #e91e63;
@@ -111,7 +110,7 @@ $transition: 0.3s ease;
         }
 
         .product-price {
-          font-size: 14px;
+          font-size: 16px;
           color: #e91e63;
         }
 
@@ -129,25 +128,23 @@ $transition: 0.3s ease;
 
     .btn-container {
       display: flex;
-      justify-content: space-between;
-      gap: 10px;
-      margin-top: 20px;
-
-      .order-button,
+      justify-content: center;
+      margin-top: 15px;
+      
       .add-to-cart {
-        flex-grow: 1;
-        padding: 10px;
-        background-color: $primary-color;
-        border-color: $primary-color;
+        background-color: #cb1c22;
+        border-color: #c9c9c9;
         color: #fff;
-        text-align: center;
-        border-radius: 4px;
-        transition: background-color $transition, transform $transition;
+        padding: 10px 20px;
+        border-radius: 30px;
+        font-weight: 600;
+        transition: background-color 0.3s, transform 0.3s ease, box-shadow 0.3s ease;
 
         &:hover {
-          background-color: $hover-color;
-          border-color: $hover-color;
+          background-color: #b4363a;
+          border-color: #567f9f;
           transform: scale(1.05);
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         &.animate {
