--- a/src/pages/product/styles.scss
+++ b/src/pages/product/styles.scss
@@ -75,11 +75,11 @@ $text-color: #333;
       text-decoration: none;
 
       .product-image {
-      width: 70%;
-      max-width: 300px;
-      height: auto;
-      border-radius: 8px;
-      transition: transform 0.3s ease, filter 0.3s ease;
+        width: 70%;
+        max-width: 300px;
+        height: auto;
+        border-radius: 8px;
+        transition: transform 0.3s ease, filter 0.3s ease;
 
         &:hover {
           transform: scale(1.05);
@@ -102,6 +102,7 @@ $text-color: #333;
 
         .product-price {
           font-size: 16px;
+          font-weight: 600;
           color: #e91e63;
         }
 
@@ -121,7 +122,7 @@ $text-color: #333;
       display: flex;
       justify-content: center;
       margin-top: 15px;
-      
+
       .add-to-cart {
         background-color: #cb1c22;
         border-color: #c9c9c9;
@@ -129,7 +130,8 @@ $text-color: #333;
         padding: 10px 20px;
         border-radius: 30px;
         font-weight: 600;
-        transition: background-color 0.3s, transform 0.3s ease, box-shadow 0.3s ease;
+        transition: background-color 0.3s, transform 0.3s ease,
+          box-shadow 0.3s ease;
 
         &:hover {
           background-color: #b4363a;
