--- a/src/pages/productDetail/styles.scss
+++ b/src/pages/productDetail/styles.scss
@@ -18,13 +18,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     max-width: 500px;
 
     &:hover {
       transform: translateY(-10px);
-      box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 20px;
+      box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
     }
 
     .main-image {
